# ib-edavki

./: .envrc  .gitignore  FUNDING.yml  LICENSE  README.md  companies.xml  flake.nix  ib-affiliates.xml  ib-edavki.py  ib_edavki.py  pyproject.toml  relief-statements.xml  setup.py  taxpayer-config-sample.xml
generators/: doh_obr.py
ib_edavki/: __init__.py
ib_edavki/generators/: doh_obr.py
ib_edavki/schemas/: Companies.xsd  Relief-Statements.xsd  Tax-Payer.xsd
nix/: package.nix
tools/: generate_schema_classes.py
